Changed bundle to  bundle-html

--- a/tests/bundle-html/src/index.html
+++ b/tests/bundle-html/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Parcel Plugin Structurize Test</title>
+        <title>Parcel Plugin Structurize - Basic</title>
         <link rel="stylesheet" href="./css/main.scss" />
     </head>
     <body>
