refactor: added image in HTML bundle

--- a/bundles/bundle-html/src/index.html
+++ b/bundles/bundle-html/src/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         Parcel plugin structurize test!
+        <img src="./images/html-5-logo.webp" alt="HTML5 logo" width="150" />
         <p id="root"></p>
         <script src="./js/index.js"></script>
     </body>
