chore: update bundle to test streamlined case and flatten

--- a/__tests__/bundle/src/index.html
+++ b/__tests__/bundle/src/index.html
@@ -7,6 +7,7 @@
         Parcel plugin structurize test!
         <img src="./images/html-5-logo.webp" alt="HTML5 logo" width="150" />
         <p id="root"></p>
+        <a href="./html/app.html">APP</a>
         <script src="./js/index.js"></script>
     </body>
 </html>
